Adds requried style.css header and makes functions.php load external files

--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
-/*--------------------------------------------------------------------------------*
- * CSS adicionado pelo João
- */
+/*
+ Theme Name:   Pinboard Child
+ Description:  Pinboard Child Theme
+ Author:       Flávio Coutinho
+ Template:     pinboard
+ Version:      1.0.0
+ License:      GNU General Public License v2 or later
+ License URI:  http://www.gnu.org/licenses/gpl-2.0.html
+*/
+
 .autor-esquerda {
   float: left;
   margin-right: 20px;
