Renames project to prisma-pinboard-child

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
- Theme Name:   Pinboard Child
- Description:  Pinboard Child Theme
+ Theme Name:   Prisma - Pinboard Child
+ Description:  Tema filho (child theme) criado a partir do Pinboard para o site do grupo Prisma do CEFET-MG.
  Author:       Flávio Coutinho
  Template:     pinboard
  Version:      1.0.0
