Fixes styles on 'equipe' page again

--- a/external/style.css
+++ b/external/style.css
@@ -32,6 +32,8 @@
     display: block  !important;
     margin-left: auto  !important;
     margin-right: auto  !important;
+    transform: none;
+    box-shadow: none;
   }
 
   .texto-autor {
